--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/global.css" />
     <script
       src="https://kit.fontawesome.com/405d5358c0.js"
@@ -16,7 +23,7 @@
     <header id="coloHeader">
       <h1 id="colorH1">Ta-Te-Ti</h1>
     </header>
-    <div class="centered" id="result">X es el ganador!</div>
+    <div class="centered" id="result"></div>
     <div class="centered">
       <div class="board">
         <div class="squares"></div>
@@ -34,5 +41,11 @@
       <button id="resetButton">RENICIAR</button>
     </div>
   </body>
+  <!-- JavaScript Bundle with Popper -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"
+  ></script>
   <script src="./scripts/index.js"></script>
 </html>
